# test

./: PROGRESS.md  index.html  package-lock.json  package.json
public/: manifest.json
scripts/: generate-manifest.cjs  optimize-animations.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/renderer/: Cargo.toml
src-tauri/renderer/src/: animation.rs  color.rs  layer_stack.rs  lib.rs  manifest.rs  png_loader.rs  shader.wgsl  svg_loader.rs  wgpu_state.rs
src-tauri/src/: main.rs
src/components/: AssetCategoryBar.tsx  AssetGrid.tsx  AvatarCanvas.tsx  ColorPalette.tsx  ColorPicker.tsx  DPadControl.tsx  ExpressionButtons.tsx  ExpressionSlots.tsx  IconButton.tsx  MicDeviceSelector.tsx  OutfitBar.tsx  StyledSelect.tsx  VerticalSlider.tsx
src/engine/: SVGRecolorer.ts  manifest.ts
src/hooks/: useRendererSync.ts
src/screens/: HomeScreen.tsx  OverlayScreen.tsx  WardrobeScreen.tsx
src/store/: minikoStore.ts
src/utils/: assetUtils.ts  colorUtils.ts
tools/compress-animations/: Cargo.toml
tools/compress-animations/src/: main.rs
