[package]
name = "miniko"
version = "0.1.0"
description = "PNGTuber Avatar Builder for Streamers"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
miniko-renderer = { path = "renderer" }

[profile.release]
opt-level = 1
lto = false
codegen-units = 16
debug = false
