[package]
name = "miniko-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "24", default-features = false, features = ["wgsl", "dx12", "metal"] }
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
rayon = "1.10"
regex = "1"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
